# mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: mcp_handlers.py  server.py
src/capabilities/: compression.py  hdf5_handler.py  node_hardware.py  slurm_handler.py
tests/: test_capabilities.py  test_mcp_handlers.py
